Fix tooltip not spilling out of input-box Adjust tootip width

--- a/www/styles.css
+++ b/www/styles.css
@@ -216,7 +216,7 @@ label {
   background-color: var(--color-secondary);
   padding: 10px;
   font-size: 14px;
-  max-width: 550px;
+  max-width: 400px;
 }
 .validation-box-cover {
     position: absolute;
